<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_url"
                    android:textSize="@dimen/tv_larger_size" />

                <EditText
                    android:id="@+id/et_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:background="@drawable/shape_input_text_bg"
                    android:gravity="top"
                    android:hint="@string/tv_please_input_url"
                    android:textColorHint="@color/color_line_view"
                    android:minHeight="@dimen/dimen_60"
                    android:paddingBottom="@dimen/dimen_10"
                    android:paddingLeft="@dimen/dimen_4"
                    android:paddingTop="@dimen/dimen_10" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_line_number"
                    android:textSize="@dimen/tv_larger_size" />

                <EditText
                    android:id="@+id/et_line_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:background="@drawable/shape_input_text_bg"
                    android:gravity="top"
                    android:hint="@string/tv_please_input_line_number"
                    android:textColorHint="@color/color_line_view"
                    android:minHeight="@dimen/dimen_40"
                    android:paddingBottom="@dimen/dimen_10"
                    android:paddingLeft="@dimen/dimen_4"
                    android:paddingTop="@dimen/dimen_10" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>