<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_car_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@drawable/shape_input_text_bg"
                android:hint="@string/tv_input_car_number"
                android:minHeight="@dimen/dimen_32"
                android:paddingBottom="@dimen/dimen_8"
                android:textColorHint="@color/color_line_view"
                android:paddingLeft="@dimen/dimen_4"
                android:paddingTop="@dimen/dimen_8" />

            <com.github.jdsjlzx.recyclerview.LRecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/dimen_20"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_query_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_query_car_bg"
                android:text="@string/tv_query_carr"
                android:gravity="center"
                android:paddingLeft="@dimen/dimen_4"
                android:paddingRight="@dimen/dimen_4"
                android:paddingBottom="@dimen/dimen_16"
                android:paddingTop="@dimen/dimen_16"
                android:textColor="@color/color_white" />

            <TextView
                android:id="@+id/tv_query_histor_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_4"
                android:paddingRight="@dimen/dimen_4"
                android:paddingBottom="@dimen/dimen_16"
                android:paddingTop="@dimen/dimen_16"
                android:gravity="center"
                android:layout_marginTop="@dimen/dimen_16"
                android:background="@drawable/shape_query_car_bg"
                android:text="@string/tv_query_history_car"
                android:textColor="@color/color_white" />


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>